css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  background-color: #add9b0;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  background-color: #f7faee;
  margin: 0;
}

.info-1 {
  background-color: #add9b0;
}

.protein-2 {
  padding-left: 27%;
}

.grass {
  width: 100%;
  overflow: hidden;
}

.grass svg {
  overflow: visible;
}

.iron, .carbon {
  background-color: #f7faee;
}

svg {
  display: block;
  width: 100%;
  height: 100%;
}

footer {
  background-color: #add9b0;
}

.bean {
  position: absolute;
  left: 5px;
  top: 5px;
  transition: all 1s linear;
}

.bean-move
  animation: beananimation 1s linear forwards;
}

.kids {
  transform: translate(50px,100px);
}

@keyframes beananimation {

  0% {
    left: 5px;
    top: 5px;
  }

  100% {
    left: 78px;
    top: 78px;
  }
}

.show-transition{
  opacity: 1;
  transition: all 1s linear;
}

#iron-man {
  transform: rotate(0);
}

.iron-man-animate{
  animation: iron-man-keyframes 1s infinite ease;
  transform-origin: ;
}

@keyframes iron-man-keyframes {

  0% {
    transform: rotate(0)
  }

  25% {
    transform: rotate(30deg)
  }

  50% {
    transform: rotate(0)
  }

    75% {
    transform: rotate(-30deg)
  }

  100% {
    transform: rotate(0)
  }
}

@media only screen and (min-width: 60em) {

  .protein-2 {
    max-width: 36.7%;
    padding-top: 1.6em;
    padding-left: 0;
  }

  .top {
    padding-left: 7em;
  }

  .iron {
    padding-left: 10%;
  }

  .carbon {
    padding-right: 10%;
  }
}

